force-app/src/objects/c2g__StatementContactLog__c.object
<CustomObject>
    <description>Custom object used to store all the customer statement contact logs.</description>
    <fields>
        <fullName>c2g__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Statement Contact Logs</relationshipLabel>
        <relationshipName>StatementContactLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__StatementLog__c</fullName>
        <label>Customer Statement Log</label>
        <referenceTo>c2g__StatementLog__c</referenceTo>
        <relationshipLabel>Customer Statement Contact Logs</relationshipLabel>
        <relationshipName>StatementContactLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Statement Contact Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Contact__c</columns>
        <columns>c2g__StatementLog__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSSTCL-{000000000}</displayFormat>
        <label>Customer Statements Contact Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Statement Contact Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>